# latentdriver-waymax-experiments

./: .gitignore  README.md  pyproject.toml
docs/: causal_semantic_planner_evaluation_strategy.md  inspiration_implementation_plan.md  latentdriver_reading_note.md  reproduction_plan.md  risk_aware_action_modulation_research.md  waymax_board.md
notebooks/: README.md  latentdriver_assets_colab.ipynb  latentdriver_colab_runner.ipynb  latentdriver_full_eval_colab.ipynb  latentdriver_preprocess_val_colab.ipynb  latentdriver_public_eval_colab.ipynb  latentdriver_visualize_colab.ipynb
patches/: latentdriver_eval_contract.patch
references/: marl_finetuning_seed_references.md
scripts/: bootstrap_upstream.py  check_eval_inputs.py  check_reasoning_causal_join.py  colab_bootstrap.py  colab_canary.py  compare_visualizations.py  download_checkpoints.py  plot_model_metrics.py  prepare_smoke_subset.py  preprocess_cache_archive.py  preprocess_validation_only.py  probe_candidate_diversity.py  pull_latest_debug.py  run_public_suite.py  run_smoke_eval.py  run_visualization.py  run_waymax_board.py  run_waymax_eval.py  setup_colab_runtime.py  stage_womd_subset_shards.py  stage_womd_validation_shard.py  stage_womd_validation_shards.py
tests/: test_candidate_diversity.py  test_colab.py  test_colab_bootstrap.py  test_colab_runner.py  test_colab_runner_notebook.py  test_config.py  test_evaluation.py  test_metadata_join.py  test_metric_plots.py  test_modulation.py  test_preprocess_archive.py  test_preprocess_validation_only.py  test_pull_latest_debug.py  test_setup_colab_runtime.py  (+6 more)
(+23 files in other folders)
