[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latentdriver-waymax-experiments"
version = "0.1.0"
description = "Reproducible Waymax evaluation of released LatentDriver-family checkpoints with Colab notebooks and visualization."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
