[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latentdriver-waymax-experiments"
version = "0.1.0"
description = "Reproducible Waymax evaluation of released LatentDriver-family checkpoints with Colab notebooks and visualization."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "bokeh>=3.4,<4",
  "matplotlib>=3.7,<4",
  "numpy>=1.26",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
